Closed
Bug 311263
Opened 20 years ago
Closed 19 years ago
CalDAV provider should send a proper 'accept' header
Categories
(Calendar :: Provider: CalDAV, defect)
Calendar
Provider: CalDAV
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: helge.hess, Assigned: browning)
Details
Attachments
(1 file, 1 obsolete file)
|
2.47 KB,
patch
|
mvl
:
second-review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b4) Gecko/20050908 Firefox/1.4
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b4) Gecko/20050908 Firefox/1.4
When issuing CalDAV REPORT requests the Sunbird CalDAV provider sends such
"Accept" headers:
---snip---
Accept:
text/xml,application/xml,application/xhtml+xml,text/html;q=0.9,text/plain;q=0.8,image/png,*/*;q=0.5
---snap---
Since a CalDAV report is always XML and Sunbird can't deal with anything else,
it should be just:
---snip---
Accept: text/xml
---snap---
In the same run it would be nice to change the default charset from:
---snip---
Accept-Charset: ISO-8859-1,utf-8;q=0.7,*;q=0.7
---snap---
to:
---snip---
Accept-Charset: utf-8,*;q=0.1
---snap---
Latin-1 as the preferred charset is really inappropriate and might trigger
unnecessary server-side charset conversions to please the client ...
Note: the latter is no real bug, just a subminor annoyance.
Reproducible: Always
Steps to Reproduce:
1. subscribe a remote calendar in Sunbird and trace the HTTP interaction
Actual Results:
Accept:
text/xml,application/xml,application/xhtml+xml,text/html;q=0.9,text/plain;q=0.8,image/png,*/*;q=0.5
Expected Results:
Accept: text/xml
Updated•20 years ago
|
OS: MacOS X → All
Hardware: Macintosh → All
| Assignee | ||
Comment 1•19 years ago
|
||
this addresses bug 311265 as well, and possibly bug 308569 as well, though the latter is not clear to me.
Attachment #245927 -
Flags: first-review?(ctalbert.moz)
Comment on attachment 245927 [details] [diff] [review]
set request headers
This looks good. The only nit I have is that on the first webSvc.PutFromString line (the 295 block) there is a space at the end of the line. Remove that and r+
Attachment #245927 -
Flags: first-review?(ctalbert.moz) → first-review+
Comment 3•19 years ago
|
||
Moving from dmose to Bruno since the former's on vacation and the latter's the one working on it. Might as well confirm it also. :)
Assignee: dmose → browning
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 4•19 years ago
|
||
Attachment #245927 -
Attachment is obsolete: true
Attachment #246240 -
Flags: second-review?(mvl)
Comment 5•19 years ago
|
||
Comment on attachment 246240 [details] [diff] [review]
correction per reviewer
r2=mvl
Attachment #246240 -
Flags: second-review?(mvl) → second-review+
| Assignee | ||
Updated•19 years ago
|
Whiteboard: [checkin needed]
Comment 6•19 years ago
|
||
Patch checked in on MOZILLA_1_8_BRANCH and trunk.
-> FIXED
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
You need to log in
before you can comment on or make changes to this bug.
Description
•