bug 311263 - Adds UTF-8 request headers for CalDAV. Patch by Bruno Browning <browning@uwalumni.com> r=ctalbert,mvl NPOTDB